Details
-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
Description
While building Ubuntu 24.04 on master branch, it failed as follows:
CC [M] /root/lustre-release/lnet/lnet/api-ni.o
/root/lustre-release/lnet/lnet/api-ni.c:2888:1: error: no previous prototype for ‘nla_extract_val’ [-Werror=missing-prototypes]
2888 | nla_extract_val(struct nlattr **attr, int *rem,
| ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
The issue was introduced by the following commit:
commit 629d80dff84e885e4efabba1a77237805e5cffa7
Author: James Simmons <jsimmons@infradead.org>
AuthorDate: Thu May 23 17:25:30 2024 -0400
Commit: Oleg Drokin <green@whamcloud.com>
CommitDate: Wed Jun 5 04:44:20 2024 +0000
LU-10003 lnet: migrate fail nid to Netlink